force-app/main/default/objects/modigie__Process_Builder_Switch__c/modigie__Process_Builder_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Process Builder Switch</label>
</CustomObject>