force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Data_Maintenance_Get_Modigie_Usage__c.field-meta.xml
<CustomField>
    <fullName>modigie__Data_Maintenance_Get_Modigie_Usage__c</fullName>
    <label>Data Maintenance Get Modigie Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>