force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Dynamic_Contact_Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>modigie__Dynamic_Contact_Logic_Type__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Dynamic Contact Logic Type</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>