force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Get_Phone_Insights_Phone_Number_Selected__c.field-meta.xml
<CustomField>
    <fullName>modigie__Get_Phone_Insights_Phone_Number_Selected__c</fullName>
    <label>Get Phone Insights Phone Number Selected</label>
    <type>TextArea</type>
</CustomField>