force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Is_Active_Lead_Alt_LinkedIn_Url__c.field-meta.xml
<CustomField>
    <fullName>modigie__Is_Active_Lead_Alt_LinkedIn_Url__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Lead Alt LinkedIn Url</label>
    <type>Checkbox</type>
</CustomField>