force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Lead_Status_Working_Get_LinkedIn_URL_Usa__c.field-meta.xml
<CustomField>
    <fullName>modigie__Lead_Status_Working_Get_LinkedIn_URL_Usa__c</fullName>
    <label>Lead Status Working Get LinkedIn URL Usa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>