force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Lead_Status_Working_Get_Phone_Insights__c.field-meta.xml
<CustomField>
    <fullName>modigie__Lead_Status_Working_Get_Phone_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Status Working Get Phone Insights</label>
    <type>Checkbox</type>
</CustomField>