force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Limit_User_for_Modigie_Ad_hoc__c.field-meta.xml
<CustomField>
    <fullName>modigie__Limit_User_for_Modigie_Ad_hoc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to specify whether to have modigie users to make limited callout or not.</description>
    <label>Limit User for Modigie Ad hoc</label>
    <type>Checkbox</type>
</CustomField>