force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Modigie_Phone_Insights_Invocable_Limit_A__c.field-meta.xml
<CustomField>
    <fullName>modigie__Modigie_Phone_Insights_Invocable_Limit_A__c</fullName>
    <label>Modigie Phone Insights Invocable Lmt Adm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>