force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Opp_Contact_Enrichment_Invocable_Limit_A__c.field-meta.xml
<CustomField>
    <fullName>modigie__Opp_Contact_Enrichment_Invocable_Limit_A__c</fullName>
    <label>Opp Contact Enrichment Invocable Lmt Adm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>