force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Opportunity_Contact_Get_LinkedIn_Limit__c.field-meta.xml
<CustomField>
    <fullName>modigie__Opportunity_Contact_Get_LinkedIn_Limit__c</fullName>
    <label>Opportunity Contact Get LinkedIn Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>