force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Opportunity_Contact_Get_Modigie__c.field-meta.xml
<CustomField>
    <fullName>modigie__Opportunity_Contact_Get_Modigie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Contact Get Modigie</label>
    <type>Checkbox</type>
</CustomField>