force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Phone_Insights_Data_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>modigie__Phone_Insights_Data_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to toggle the Phone Insights (Data Maintenance) schedule class.</description>
    <label>Phone Insights Data Maintenance</label>
    <type>Checkbox</type>
</CustomField>