force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Selected_time_interval_phone_insights__c.field-meta.xml
<CustomField>
    <fullName>modigie__Selected_time_interval_phone_insights__c</fullName>
    <label>Selected time interval phone insights</label>
    <length>200</length>
    <type>Text</type>
</CustomField>