force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Unreachable_Get_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>modigie__Unreachable_Get_LinkedIn_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unreachable Get LinkedIn URL</label>
    <type>Checkbox</type>
</CustomField>