force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Unreachable_Get_Modigie_Limit__c.field-meta.xml
<CustomField>
    <fullName>modigie__Unreachable_Get_Modigie_Limit__c</fullName>
    <label>Unreachable Get Modigie Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>