force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Unreachable_Verify_Employer_Usage__c.field-meta.xml
<CustomField>
    <fullName>modigie__Unreachable_Verify_Employer_Usage__c</fullName>
    <label>Unreachable Verify Employer Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>