force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Unresponsive_Lead_Get_Modigie__c.field-meta.xml
<CustomField>
    <fullName>modigie__Unresponsive_Lead_Get_Modigie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unresponsive Lead Get Modigie</label>
    <type>Checkbox</type>
</CustomField>