force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Unresponsive_Lead_Get_Phone_Insights_A__c.field-meta.xml
<CustomField>
    <fullName>modigie__Unresponsive_Lead_Get_Phone_Insights_A__c</fullName>
    <label>Unresponsive Lead Get Phone Insights A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>