force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Unresponsive_Lead_Invocable_Limits__c.field-meta.xml
<CustomField>
    <fullName>modigie__Unresponsive_Lead_Invocable_Limits__c</fullName>
    <label>Unresponsive Lead Invocable Limits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>