force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Validate_Employer__c.field-meta.xml
<CustomField>
    <fullName>modigie__Validate_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Employer</label>
    <type>Checkbox</type>
</CustomField>