force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Validate_Employer_Invocable_Limit_A__c.field-meta.xml
<CustomField>
    <fullName>modigie__Validate_Employer_Invocable_Limit_A__c</fullName>
    <label>Validate Employer Invocable Limit Admin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>