force-app/main/default/objects/modigie__Process_Builder_Switch__c/fields/modigie__Validate_Employer_Invocable_Usage__c.field-meta.xml
<CustomField>
    <fullName>modigie__Validate_Employer_Invocable_Usage__c</fullName>
    <label>Validate Employer Invocable Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>